plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.graalvm.buildtools.native' version '0.10.2'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

javafx {
    version = '21'
    modules = ['javafx.base', 'javafx.graphics', 'javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation 'org.openjfx:javafx-base:21'
    implementation 'org.openjfx:javafx-graphics:21'
    implementation 'org.openjfx:javafx-controls:21'
    implementation 'org.openjfx:javafx-fxml:21'
    implementation 'org.java-websocket:Java-WebSocket:1.5.2'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.3.1'
    implementation 'org.apache.httpcomponents.core5:httpcore5:5.2.4'
    implementation 'net.lingala.zip4j:zip4j:2.11.5'
    implementation 'org.bouncycastle:bcpg-jdk18on:1.77'
    implementation 'org.graalvm.polyglot:polyglot:24.0.2'
    implementation 'org.graalvm.polyglot:python-community:24.0.2'
}

application {
    mainClass = 'moe.maika.fmaptracker.Launcher'
    applicationDefaultJvmArgs = ['--add-exports', 'javafx.base/com.sun.javafx.event=ALL-UNNAMED']
}

graalvmNative {
    binaries {
        main {
            imageName = 'FMAchipelagoTracker'
            buildArgs.add("-O4")  // seems to noticeably speed up application
        }
    }
}

// jar {
//     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
//     manifest {
//         attributes 'Main-Class': application.mainClass.get(),
//                    "Multi-Release": true
//     }
//     from {
//         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
//     }
//     exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'
// }
